--- a/package.json
+++ b/package.json
@@ -23,10 +23,21 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^7.1.3",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^7.0.0",
+    "@types/mongodb": "^3.5.4",
+    "apollo-server-express": "^2.11.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.0-rc.0",
+    "graphql": "^14.6.0",
+    "graphql-tools": "^4.0.7",
+    "mongodb": "^3.5.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.2.24",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
